# roboptim-core-plugin-ipopt

./: CMakeLists.txt  package.xml
src/: CMakeLists.txt
