<?xml version="1.0"?>
<package>
  <name>roboptim-core-plugin-ipopt</name>
  <version>0.1.0</version>
  <description>This plus provides the interface from roboptim to ipopt.</description>

  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>rclcpp</build_depend>
  <build_depend>roboptim-core</build_depend>
  
  <run_depend>rclcpp</run_depend>
  <run_depend>roboptim-core</run_depend>

</package>
